--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --open --mode production",
     "build": "webpack --mode production",
-    "start": "webpack --watch"
+    "watch": "webpack --watch"
   },
   "browserslist": [
     "> 1%",
