--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open --mode production",
+    "dev": "webpack-dev-server --open --mode development",
     "build": "webpack --mode production",
     "watch": "webpack --watch"
   },
