--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "cssnano": "^4.1.10",
     "file-loader": "^4.2.0",
     "fs": "0.0.1-security",
-    "glob": "^7.1.4",
     "html-webpack-plugin": "^3.2.0",
+    "ion-rangeslider": "^2.3.0",
+    "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "path": "^0.12.7",
