--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fs": "0.0.1-security",
     "html-webpack-plugin": "^3.2.0",
     "ion-rangeslider": "^2.3.0",
+    "item-quantity-dropdown": "^2.0.2",
     "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
